--- a/Fairy.Log/Web.config
+++ b/Fairy.Log/Web.config
@@ -4,6 +4,43 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
+	<log4net>
+		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="LogFileAppender" type="log4net.Appender.FileAppender">
+			<param name="Encoding" value="utf-8" />
+			<file value="logs/Fairy.Log.txt" />
+			<appendToFile value="true" />
+			<datePattern value="yyyy:MM:dd-HH:mm:ss" />
+			<layout type="log4net.Layout.DynamicPatternLayout">
+				<param name="Header" value="%newline**** Trace Opened Local: %date{yyyy-MM-dd HH:mm:ss.fff} UTC: %utcdate{yyyy-MM-dd HH:mm:ss.fff} ****%newline"/>
+				<header value="&#13;&#10;----------------------------------------------------------------------------------header--------------------------------------------------------------------------------------&#13;&#10;" />
+				<!--这里的各种符号是 log4net.Layout.PatternLayout的一些转换模式 后面再说-->
+				<conversionPattern value="记录时间：%d 线程ID:[%t] 日志级别：%-5p 出错类：%l property:[%p] - 错误描述：%m%n" />
+				<footer value="&#13;&#10;----------------------------------------------------------------------------------footer--------------------------------------------------------------------------------------&#13;&#10;" />
+				<param name="Footer" value="**** Trace Closed %date{yyyy-MM-dd HH:mm:ss.fff} ****%newline"/>
+			</layout>
+			<!--对内容按日志级别进行过滤-->
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="Info" />
+				<levelMax value="Error" />
+			</filter>
+		</appender>
+		<root>
+			<level value="INFO" />
+			<appender-ref ref="ConsoleAppender" />
+		</root>
+		<logger name="Fairy.Log.Controllers.V1">
+			<level value="warn" />
+			<appender-ref ref="LogFileAppender" />
+		</logger>
+	</log4net>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
