--- a/Fairy.Mvc/Web.config
+++ b/Fairy.Mvc/Web.config
@@ -4,6 +4,28 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	<configSections>
+		<!-- Add log4net config section-->
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
+	<log4net debug="true">
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="App_Data/logs/log.log" />
+			<param name="Encoding" value="utf-8" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="100KB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+			</layout>
+		</appender>
+		<root>
+			<level value="DEBUG" />
+			<appender-ref ref="RollingLogFileAppender" />
+		</root>
+	</log4net>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
