--- a/Fairy.Mvc/log4net.config
+++ b/Fairy.Mvc/log4net.config
@@ -1,28 +1,78 @@
 <log4net>
 
 	<appender name="ErrorAppender" type="log4net.Appender.RollingFileAppender">
-		<param name="File" value="logs\error.log" />
+		<param name="File" value="App_Data/logs/error.log" />
+		<param name="Encoding" value="utf-8" />
 		<param name="AppendToFile" value="true" />
-		<param name="MaxSizeRollBackups" value="100" />
-		<param name="MaximumFileSize" value="1MB" />
+		<param name="MaxSizeRollBackups" value="10" />
+		<param name="MaximumFileSize" value="100KB" />
 		<param name="RollingStyle" value="Size" />
 		<param name="StaticLogFileName" value="true" />
 		<layout type="log4net.Layout.PatternLayout">
 			<param name="ConversionPattern" value="%-5p %d [%c] %m%n" />
 		</layout>
+		<filter type="log4net.Filter.LevelRangeFilter">
+			<levelMin value="ERROR" />
+			<levelMax value="FATAL" />
+		</filter>
 	</appender>
 	<appender name="InfoAppender" type="log4net.Appender.RollingFileAppender">
-		<param name="File" value="logs\info.log" />
+		<param name="File" value="App_Data/logs/info" />
+		<param name="Encoding" value="utf-8" />
 		<param name="AppendToFile" value="true" />
-		<param name="MaxSizeRollBackups" value="100" />
-		<param name="MaximumFileSize" value="1MB" />
-		<param name="RollingStyle" value="Size" />
-		<param name="StaticLogFileName" value="true" />
+		<param name="MaxSizeRollBackups" value="10" />
+		<param name="MaximumFileSize" value="100KB" />
+		<!--<param name="RollingStyle" value="Size" />-->
+		<param name="RollingStyle" value="Composite" />
+		<param name="StaticLogFileName" value="false" />
 		<layout type="log4net.Layout.PatternLayout">
 			<param name="ConversionPattern" value="%-5p %d [%c] %m%n" />
+		</layout>
+		<filter type="log4net.Filter.LevelRangeFilter">
+			<levelMin value="DEBUG" />
+			<levelMax value="Info" />
+		</filter>
+	</appender>
+
+	<!--按日期分割日志文件 一天一个-->
+	<appender name="LogFileAppenderByDate" type="log4net.Appender.RollingFileAppender" >
+		<!--是否续写-->
+		<param name="AppendToFile" value="true" />
+		<!--最小锁定模型以允许多个进程可以写入同一个文件-->
+		<param name="LockingModel" value="log4net.Appender.FileAppender.MinimalLock" />
+		<param name="StaticLogFileName" value="true" />
+		<!--保存路径-->
+		<param name="File" value="LogData\\" />
+		<param name="DatePattern" value="yyyy-MM-dd.LOG" />
+		<param name="StaticLogFileName" value="false" />
+		<param name="RollingStyle" value="Date" />
+		<layout type="log4net.Layout.PatternLayout">
+			<param name="ConversionPattern" value="时间:%d %n级别:%level %n类名:%c%n文件:%F 第%L行%n日志内容:%m%n-----------------------------------------%n%n" />
 		</layout>
 	</appender>
 
+
+
+	<!--按日志容量分割日志文件 10KB一个-->
+	<appender name="LogFileAppenderBySize" type="log4net.Appender.RollingFileAppender" >
+		<!--是否续写-->
+		<param name="AppendToFile" value="true" />
+		<!--最小锁定模型以允许多个进程可以写入同一个文件-->
+		<param name="LockingModel" value="log4net.Appender.FileAppender.MinimalLock" />
+		<param name="StaticLogFileName" value="true" />
+		<!--按照文件的大小进行变换日志文件-->
+		<param name="RollingStyle" value="Size" />
+		<param name="File" value="LogData\\log.txt" />
+		<!--单个文件最大数量 好像只有在 RollingStyle=Size分割时有效-->
+		<param name="MaximumFileSize" value="20KB"/>
+		<!--保留的log文件数量 超过此数量后 自动删除之前的 好像只有在 按Size分割时有效-->
+		<param name="MaxSizeRollBackups" value="2" />
+		<param name="StaticLogFileName" value="false" />
+		<layout type="log4net.Layout.PatternLayout">
+			<param name="ConversionPattern" value="发生时间:%d %n事件级别:%level %n相关类名:%c%n程序文件:%F 第%L行%n日志内容:%m%n-----------------------------------------%n%n" />
+		</layout>
+	</appender>
+ 
 	<!--<logger name="logerror">
 		<level value="ERROR" />
 		<appender-ref ref="ErrorAppender" />
@@ -31,7 +81,7 @@
 		<level value="INFO" />
 		<appender-ref ref="InfoAppender" />
 	</logger>-->
-	
+
 	<!--Info-->
 	<root>
 		<!-- 控制级别，由低到高：ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF -->
@@ -39,7 +89,9 @@
 		<!-- 如果没有定义LEVEL的值，则缺省为DEBUG -->
 		<level value="ALL" />
 		<!-- 按日期切分日志文件，并将日期作为日志文件的名字 -->
-		<appender-ref ref="ErrorAppender" />
-		<appender-ref ref="InfoAppender" />
+		<!--<appender-ref ref="ErrorAppender" />
+		<appender-ref ref="InfoAppender" />-->
+		<appender-ref ref="LogFileAppenderByDate" />
+		<appender-ref ref="LogFileAppenderBySize" />
 	</root>
 </log4net>
