--- a/Fairy.Mvc/App_Config/log4net-v2.config
+++ b/Fairy.Mvc/App_Config/log4net-v2.config
@@ -26,6 +26,8 @@
 				<!--定义输出格式-->
 				<!--示例 2018-08-20 12:10:49,348 -线程ID:[21] 日志级别:[INFO ] : [日志信息]-->
 				<param name="ConversionPattern" value="%date 线程ID:[%thread] 日志级别:[%-5level] : [%message]%newline" />
+				<!--<param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n" />-->
+				<!--<conversionPattern value="%level %thread %logger - %message%newline" />-->
 			</layout>
 			<!--过滤级别 FATAL > ERROR > WARN > INFO > DEBUG-->
 			<filter type="log4net.Filter.LevelRangeFilter">
