--- a/Fairy.Mvc/Web.config
+++ b/Fairy.Mvc/Web.config
@@ -1,11 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  有关如何配置 ASP.NET 应用程序的详细信息，请访问
-  https://go.microsoft.com/fwlink/?LinkId=301880
-  -->
 <configuration>
-	<configSections>
-		<!-- Add log4net config section-->
+	<!--<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 	<log4net debug="true">
@@ -14,8 +9,8 @@
 			<param name="Encoding" value="utf-8" />
 			<appendToFile value="true" />
 			<rollingStyle value="Size" />
-			<maxSizeRollBackups value="10" />
-			<maximumFileSize value="100KB" />
+			<maxSizeRollBackups value="5" />
+			<maximumFileSize value="10240KB" />
 			<staticLogFileName value="true" />
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
@@ -25,7 +20,7 @@
 			<level value="DEBUG" />
 			<appender-ref ref="RollingLogFileAppender" />
 		</root>
-	</log4net>
+	</log4net>-->
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
